# tr_comp_motor

./: CMakeLists.txt  readme.md
include/motor/: dji.h  dm.h  gyj.h
src/: dji.cc  dm.cc  gyj.cc
